--- a/Freshest.html
+++ b/Freshest.html
@@ -17,5 +17,8 @@
     </nav>
     <h1>Freshest</h1>
     <h2>Clean, Healthy, Always Fresh Foods</h2>
+    <section class="container-1">
+        Container-1
+    </section>
 </body>
 </html>
