--- a/Freshest.html
+++ b/Freshest.html
@@ -10,15 +10,21 @@
             <a href="#">Freshest</a>
         </header>
         <header class="nav-right">
-            <a href="#">Home</a>
-            <a href="#">Menu</a>
+            <a href="#">Home &nbsp</a>
+            <a href="#">Menu &nbsp</a>
             <a href="#">Contact</a>
         </header>
     </nav>
-    <h1>Freshest</h1>
-    <h2>Clean, Healthy, Always Fresh Foods</h2>
-    <section class="container-1">
-        Container-1
+    <section class="con-0">
+        <h1>Freshest</h1>
+        <hr class="freshest-hr">
+        <h2>Clean, Healthy, Always Fresh Foods</h2>
+    </section>
+    <section class="con-1">
+        <img src="images/human-holding-a-bread-745988.jpg" width="550px" height=auto>
+    </section>
+    <section class="con-2">
+        <img src="images/green-pineapple-fruit-with-brown-framed-sunglasses-beside-1161547.jpg" width="550px" height=auto>
     </section>
 </body>
 </html>
