title complete, block adjustments

--- a/Freshest.html
+++ b/Freshest.html
@@ -22,9 +22,24 @@
     </section>
     <section class="con-1">
         <img src="images/human-holding-a-bread-745988.jpg" width="550px" height=auto>
+        <div class="side-text">
+            <h3>This is some text</h3>
+            <p>this is some even more detailed text. It sure is cool writting text.</p>
+        </div>
     </section>
     <section class="con-2">
+        <div class="side-text">
+            <h3>This is some text</h3>
+            <p>this is some even more detailed text. It sure is cool writting text.</p>
+         </div>
         <img src="images/green-pineapple-fruit-with-brown-framed-sunglasses-beside-1161547.jpg" width="550px" height=auto>
+    </section>
+    <section class="con-3">
+        <img src="images/cooked-pasta-on-brown-wooden-bowl-803963.jpg" width="550px" height="auto">
+        <div class="side-text">
+            <h3>This is some text</h3>
+            <p>this is some even more detailed text. It sure is cool writting text.</p>
+        </div>
     </section>
 </body>
 </html>
