writing but i actually changed all the p tags

--- a/Freshest.html
+++ b/Freshest.html
@@ -30,7 +30,7 @@
     <section class="con-2">
         <div class="side-text">
             <h3>This is some text</h3>
-            <p>this is some even more detailed text. It sure is cool writting text.</p>
+            <p>this is some even more detailed text. It sure is cool writing text.</p>
          </div>
         <img src="images/green-pineapple-fruit-with-brown-framed-sunglasses-beside-1161547.jpg" width="550px" height=auto>
     </section>
